# latteusgeneraattori

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
.github/workflows/: python-package.yml
data/: opetusdata.txt
dokumentaatio/: kayttoohje.md  maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md
src/: aloitus.py  generaattori.py  kayttoliittyma.py  sanalaskija.py  solmu.py  trie.py
src/tests/: generaattori_test.py  sanalaskija_test.py  trie_test.py
viikkoraportit/: viikkoraportti.md  viikkoraportti1.md  viikkoraportti2.md  viikkoraportti3.md  viikkoraportti4.md  viikkoraportti5.md
